style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Roboto&display=swap');
@import "./carousel.css";
@import "./nav-menu.css";

:root{
  --header-min-height: 5vh;
  --footer-min-height: 5vh;
  --text-color-default: rgb(35, 35, 35);
  --bg-color-default: rgb(255, 255, 255);
  --accent-color-default: rgb(35, 35, 35);
  --crosshair-border-color: rgb(35, 35, 35);
  --build-gap: 6px;

  font-size: 18px;
  color: var(--text-color-default);
  background-color: var(--bg-color-default);
  font-family: 'Roboto', sans-serif, monospace;
}

div {
  /* border: 1px solid red; */
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a, a:visited {
  text-decoration: none;
  color: inherit;
  transition: 0.3s ease-in-out;
}

.link-underline-animation{
  position: relative;
}

.link-underline-animation::after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: var(--accent-color-default);
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.link-underline-animation:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}


button{
  font-family: 'Roboto';
  padding: 8px 12px;
  font-size: 15px;
  border: none;
  border-radius: 10px;
  color: var(--text-color-default);
  background-color: var(--bg-color-default);
  cursor: pointer;
  filter: invert(1); /* By default make buttons inverted */
}

.btn-setting-active{
  background-color: hotpink;
}

body {
  min-height: 100vh;
  min-width: 320px;
  background: var(--bg-color-default);
}

body > * { /* header, main, footer */
  padding: 20px;
}

header {
  display: flex;
  min-height: var(--header-min-height);
  min-width: 320px;
  justify-content: space-between;
  background-color: var(--bg-color-default);
  z-index: 3;
}

.fixed-header {
  position: fixed;
  width: 100%;
  border-bottom: 1px dashed grey;
}

.vertical-buffer{
  margin-top: 20vh;
}

header > div {
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
}

.nav-theme-select {
  display: flex;
}

main {
  min-height: calc(100vh - var(--header-min-height) - var(--footer-min-height));
}

footer {
  min-height: var(--footer-min-height);
  background-color: var(--bg-color-default);
  color: var(--text-color-default);
  flex-wrap: wrap;
  gap: 40px;
  filter: invert(1);
}

.footer-nav {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto;
}

h1 {
  padding: 10px;
  font-size: 2.5em;
}

h2 {
  font-size: 2em; 
}

h3 {
  font-size: 1.5em;
  padding: 12px 6px;
}

h4 {

}

p {

}

.profile{
  background-color: var(--bg-color-default);
  border: 2px solid var(--accent-color-default);
  padding: 10px;
  border-radius: 10px;
  margin-bottom: 40px;
  line-height: 1.5;
}


.profile > h1 {
  margin-bottom: 20px; 
}

.profile-col{
  margin-bottom: 1rem;
}

.profile-col:nth-child(1){
  margin-top: 1rem;
}

.profile-timeline{
  display: none;
}

.icon-svg{
  display: inline-block;
  width: 1em;
  height: 1em;
}

.sub-greeting {
  font-size: 0.5em;
  color: var(--text-color-default);
  opacity: 0.6;
}


.my-handle {
  align-items: flex-end;
}

.credits {
  justify-content: flex-end;
  align-items: flex-end;
}

.theme-toggle{
  
}

.social-icons {
  
}

.crosshair-container{
  display: flex;
  flex-wrap: wrap;
  max-width: 800px;
}

.top-left-square, .top-right-square, .bottom-left-square, .bottom-right-square {
  display: flex;
  flex: 1;
  width: clamp(280px, calc(50vw - 20px), 400px);
  aspect-ratio: 1;
  justify-content: center;
  align-items: center;
}

.top-left-square{
  
  
}

.top-right-square{
  border-left:4px solid var(--crosshair-border-color);
  
}

.bottom-left-square{
  border-top: 4px solid var(--crosshair-border-color);
}

.bottom-right-square{
  border-top: 4px solid var(--crosshair-border-color);
  border-left: 4px solid var(--crosshair-border-color);
}

.square{
  position: relative;
}

.square-wrapper {
  display: flex;
}

.foreground-square{
  padding: 10px;
  display: flex;
  gap: var(--build-gap);
  z-index: 4;
  position: absolute;
  width: 100%;
  height: 100%;
  transition: 0.5s;
  border: 2px solid var(--accent-color-default);
  flex-wrap: wrap;
}

.foreground-square:hover{
  background-color: var(--bg-color-default);
  z-index: 4;
}

.build-image{
  width: 100%;
  height: 100%;
  border-radius: 10px;
  border: 2px solid var(--accent-color-default);
}

.build-preview{
  width: calc(50% - var(--build-gap));
  height: calc(50% - var(--build-gap));
  transition: 0.2s ease-in-out;
}

.bp-top-left:hover{
  transform: translateX(35%) translateY(35%) scaleX(180%) scaleY(180%);
}

.bp-top-right:hover{
  transform: translateX(-35%) translateY(35%) scaleX(180%) scaleY(180%);
}
.bp-bottom-left:hover{
  transform: translateX(35%) translateY(-35%) scaleX(180%) scaleY(180%);
}
.bp-bottom-right:hover{
  transform: translateX(-35%) translateY(-35%) scaleX(180%) scaleY(180%);
}

.hover-title{
  font-size: 0.7em;
  background-color: var(--bg-color-default);
  color: var(--text-color-default);
  filter: invert(1);
  position: absolute;
  top: 40%;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: min-content;
  opacity:0;
  transition: 0.5s ease-in-out;
  padding:4px 8px;
  border-radius: 8px;
  text-align: center;
}

.list.expand {
  border: 1px solid var(--accent-color-default);

}

/* Utils */

.hide{
  display: none;
}

.show{
  display: flex;
}

.flex {
  display: flex;
}

.flex-column {
  flex-direction: column;
}

.flex-apart{
  justify-content: space-between;
}

.justify-center {
  justify-content: center;
}

.align-center {
  align-items: center;
}

.gap-10 {
  gap: 10px;
}

.gap-20 {
  gap: 20px;
}

.gap-40 {
  gap: 40px;
}

.layout-change{
  display: flex;
  flex-direction: column;
}

/* End Utils */

/* Media queries*/

@media screen and (max-width: 600px){
  .crosshair-container{
    flex-direction: column;
  }

  .square-wrapper {
    flex-direction: column;
  }

  .top-left-square{
  border-top: 4px solid var(--crosshair-border-color);
  
  }
  
  .top-right-square{
    border-left:none;
    
  }
  
  .bottom-left-square{
    border-top: none;
  }
  
  .bottom-right-square{
    border-top: none;
    border-left: none;
  }
  
  .top-left-square, .top-right-square, .bottom-left-square, .bottom-right-square{
    border-bottom: 4px solid var(--crosshair-border-color);
    width: 100%;
    height: calc(100vw - 40px)
  }

}

@media screen and (max-width: 500px) {
  .credits {
    flex-direction: row;
    text-align: center;
  }
}
/* End of Mobile */


/* Tablet  / Windowed laptop */ 

@media screen and (min-width: 601px){
  
  .crosshair-container{
    margin: 0 auto;
  }

  .vertical-buffer {
    margin-top: 15vh;
  }
}

/* End Tablet */

/* Laptop Full screen ++ */

@media screen and (min-width: 1200px){

  header{
    justify-content: center;  
  }

  .nav-links{
    justify-content: center;
  }

  .layout-change{
    flex-direction: row;
    gap: 20px;
  }

  .profile{
    max-height: 500px;
    max-width: 800px;
    overflow: scroll;
    margin: auto auto;
  }
  .vertical-buffer {
    margin-top: 8vh;
  }

}

@media screen and (min-width: 1500px) {

  .profile-col:nth-child(1){
    margin-top: 0;
  }

  .profile-timeline{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    text-align: center;
    padding: 0 20px;
    margin-top: 20px;
  }
  
  .profile-grid-cols{
    display: grid;
    gap: 10px;
    padding: 20px;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;
  }
  
  .profile-col{
    font-size: 0.8rem;
    padding: 10px;
    border: 1px dashed var(--accent-color-default);
    border-radius: 5px;
  }

  .profile-col > p {
    max-height: 160px;
    overflow: scroll;
  }

}

@media screen and (min-width: 900px) and (max-width: 1199px){
  .profile-col:nth-child(1){
    margin-top: 0;
  }

  .profile-timeline{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    text-align: center;
    padding: 0 20px;
    margin-top: 20px;
  }
  
  .profile-grid-cols{
    display: grid;
    gap: 10px;
    padding: 20px;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;
  }
  
  .profile-col{
    font-size: 0.8rem;
    padding: 10px;
    border: 1px dashed var(--accent-color-default);
    border-radius: 5px;
  }

  .profile-col > p {
    max-height: 130px;
    overflow: scroll;
  }

  

}

